--- a/app/views/items/menu.html.erb
+++ b/app/views/items/menu.html.erb
@@ -43,22 +43,24 @@
     </div>
   </div>
 
-  <div class="col s3 order-panel">
+  <div class="col s3 offset-s7 order-panel">
     <% if current_user && @carted_items.length > 0 %>
       <div>
-        <h3>Your Order</h3>
+        <h5>Your Order</h5>
         <% @carted_items.each do |carted_item| %>
-          <h4><%= carted_item.item.name %></h4>
-          <h4>Quantity: <%= carted_item.quantity %></h4>
-          <h4>Price: <%= number_to_currency(carted_item.item.price * carted_item.quantity) %></h4>
+          <h5><%= carted_item.item.name %></h5>
+          <p>Quantity: <%= carted_item.quantity %> Price: <%= number_to_currency(carted_item.item.price * carted_item.quantity) %></p>
+          <!-- <p>Price: <%= number_to_currency(carted_item.item.price * carted_item.quantity) %></p> -->
           <%= form_tag "/carted_items/#{carted_item.id}", method: :delete do %>
-            <input class="btn" type="submit" value="delete">
+            <button class="btn-floating" type="submit"><i class="material-icons trash-icon">delete</i></button>
           <% end %>
         <% end %>
       </div>
-      <h4>subtotal: <%= number_to_currency(@subtotal) %></h4>
-      <h4>tax: <%= number_to_currency(@tax) %></h4>
-      <h4>total: <%= number_to_currency(@total) %></h4>
+      <ul>
+        <li>subtotal: <%= number_to_currency(@subtotal) %></li>
+        <li>tax: <%= number_to_currency(@tax) %></li>
+        <li><strong>total:</strong> <%= number_to_currency(@total) %></li>
+      </ul>
       <div>
         <%= form_tag "/orders", method: :post do %>
           <input class="btn" type="submit" value="Submit Order">
@@ -67,5 +69,16 @@
     <% end %>
   </div>
 
-
 </div>
+
+
+
+<script>
+   $(document).ready(function(){
+    $('.order-panel').pushpin({
+      top: 0,
+      // bottom: 1000,
+      offset: 0
+    });
+  });
+</script>
