--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -3,7 +3,7 @@
   <%= render "form", url: "/items/#{@item.id}" %>
   <%= submit_tag "Update Item" %>
 <% end %>
-<a href="/admin">Cancel</a>
+<a href="/admin" class="normal-link">Cancel</a>
 
 <script>
   $(document).ready(function() {
