--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -3,7 +3,7 @@
   <%= render "form", url: "/items" %>
   <%= submit_tag "Add Item"%>
 <% end %>
-<a href="/admin">Cancel</a>
+<a href="/admin" class="normal-link">Cancel</a>
 
 <script>
   $(document).ready(function() {
