--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -9,3 +9,5 @@
 <p>Subtotal: <%= number_to_currency(@order.subtotal) %></p>
 <p>Tax: <%= number_to_currency(@order.tax) %></p>
 <p>Total <%= number_to_currency(@order.total) %></p>
+
+<a href="/">Back to Menu</a>
