--- a/app/assets/stylesheets/menu_admin.css
+++ b/app/assets/stylesheets/menu_admin.css
@@ -119,3 +119,37 @@ h3 {
 .add-btn {
   margin-top: 20px;
 }
+
+.divider {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.card-title {
+  text-align: center;
+}
+
+.card .card-content {
+  height: 150px;
+  margin-top: 20px;
+}
+
+#card-description {
+  text-align: center;
+}
+
+#card-price {
+  text-align: right;
+}
+
+#add-item-button {
+  margin-bottom: 30px;
+}
+
+.admin-category {
+  text-align: center;
+}
+
+#menu-category {
+  text-align: center;
+}
