--- a/app/views/items/admin.html.erb
+++ b/app/views/items/admin.html.erb
@@ -37,21 +37,45 @@
     <!-- </div> -->
   <!-- </div> -->
 
-  <div class="divider"></div>
+  <div class="divider col s12"></div>
 
   <!-- ITEMS SECTION -->
   <div class="col s12">
     <h1>CURRENT ITEMS</h1>
-    <a href="/items/new" class="waves-effect waves-light btn">Add New Item</a>
-    <% @items.each do |item| %>
-      <h3><%= item.name %></h3>
-      <p><%= item.description %></p>
-      <p><%= number_to_currency(item.price) %></p>
-      <a href="/items/<%= item.id %>/edit" class="normal-link">Edit</a>
-      <%= form_tag "/items/#{item.id}", method: :delete do %>
-        <button class="btn-floating" type="submit" value="delete"><i class="material-icons">delete</i></button>
+    <div class="col s12" id="add-item-button">
+      <a href="/items/new" class="waves-effect waves-light btn col s4 push-s4">Add New Item</a>
+    </div>
+
+    <% @categories.each do |category| %>
+      <h2 class="col s12" id="menu-category"><%= category.name.pluralize %></h2>
+      <% @items.each do |item| %>
+        <% if item.category.id == category.id %>
+          <div class="col s6 z-depth-5">
+            <div class="card grey darken-3">
+              <div class="card-content white-text">
+                <span class="card-title"><%= item.name %></span>
+                <p id="card-description"><%= item.description %></p>
+                <p id="card-price"><%= number_to_currency(item.price) %></p>
+              </div>
+              <div class="card-action col s12">
+                <a href="/items/<%= item.id %>/edit" class="normal-link btn-floating" class="col s2">
+                  <i class="material-icons">edit</i>
+                </a>
+                <div class="col s2">
+                  <%= form_tag "/items/#{item.id}", method: :delete do %>
+                    <button class="btn-floating" type="submit" value="delete">
+                      <i class="material-icons">delete</i>
+                    </button>
+                  <% end %>
+                </div>
+              </div>
+            </div>
+          </div>
+        <% end %>
       <% end %>
     <% end %>
+
+
   </div>
 
 </div>
