--- a/app/views/items/menu.html.erb
+++ b/app/views/items/menu.html.erb
@@ -28,7 +28,8 @@
                   <% if current_user %>
                     <%= form_tag "/carted_items", method: :post do %>
                       <div class="quantity-box">
-                        Quantity: <input type="text" name="quantity">
+                        Quantity: 
+                        <input type="text" name="quantity class">
                       </div>
                       <input type="hidden" name="item_id" value="<%= item.id %>">
                       <input class="btn" type="submit" value="Add to Order">
@@ -45,7 +46,7 @@
 
   </div>
   <!-- YOUR ORDER -->
-  <div class="col s3 offset-s7 order-panel">
+  <div class="col s3 order-panel">
     <% if current_user && @carted_items.length > 0 %>
       <div>
         <h5>Your Order</h5>
@@ -72,7 +73,7 @@
 
 </div>
 
-<script>
+<!-- <script>
    $(document).ready(function(){
     $('.order-panel').pushpin({
       top: 0,
@@ -80,4 +81,4 @@
       offset: 0
     });
   });
-</script>
+</script> -->
