--- a/app/views/items/menu.html.erb
+++ b/app/views/items/menu.html.erb
@@ -29,7 +29,7 @@
                     <%= form_tag "/carted_items", method: :post do %>
                       <div class="quantity-box">
                         Quantity: 
-                        <input type="text" name="quantity class">
+                        <input type="text" name="quantity">
                       </div>
                       <input type="hidden" name="item_id" value="<%= item.id %>">
                       <input class="btn" type="submit" value="Add to Order">
