--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -5,9 +5,9 @@
   <h4>Item: <%= carted_item.item.name %></h4>
   <p>Quantity: <%= carted_item.quantity %></p>
 <% end %>
-
+<div class="divider"></div>
 <p>Subtotal: <%= number_to_currency(@order.subtotal) %></p>
 <p>Tax: <%= number_to_currency(@order.tax) %></p>
 <p>Total <%= number_to_currency(@order.total) %></p>
 
-<a href="/">Back to Menu</a>
+<a href="/" class="normal-link">Back to Menu</a>
