fix validation error messages

--- a/app/assets/stylesheets/menu_admin.css
+++ b/app/assets/stylesheets/menu_admin.css
@@ -185,8 +185,8 @@ h3 {
 
 .description-area {
   height: 75px;
-  background-color: #4db6ac;
-  opacity: 0.8;
+  background-color: #404040;
+  opacity: 0.9;
 }
 
 /*SIGNUP FORM*/
