--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
             <% if current_user %>
               <li><a href="/logout">Log Out</a></li>
             <% else %>
+              <li><a href="signup">Sign Up</a></li>
               <li><a href="/login">Log In</a></li>
             <% end %> 
           </ul>
