--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -14,6 +14,20 @@
       <div>
         Confirm Password: <input type="password" name="password_confirmation">
       </div>
+      <% if current_user && current_user.admin %> 
+        <div class="admin-checkbox col s12">
+          <div>
+            Set as Admin?
+          </div>
+          <div>
+            <p class="col s3">
+              <input type="hidden"  name="admin" value="false" />  <!-- sets admin to false by default -->
+              <input type="checkbox" name="admin" class="filled-in" id="admin-option" value="true" />
+              <label for="admin-option">Yes</label>
+            </p>
+          </div>
+        </div>
+      <% end %>
       <input type="submit" class="btn" value="Add User">
     <% end %>
   </div>
