--- a/app/views/items/admin.html.erb
+++ b/app/views/items/admin.html.erb
@@ -2,8 +2,8 @@
   <% if current_user %>
     <p class="col s6">Hello, <%= current_user.name %></p>
   <% end %>
-  <div class="col s4 offset-s2">
-    <a href="/signup" class="waves-effect waves-light btn" id="register-user-button">Register New User</a>
+  <div class="">
+    <a href="/signup" class="waves-effect waves-light btn col s2 offset-s4" id="register-user-button">Register New User</a>
   </div>
 
 
