--- a/app/assets/stylesheets/menu_admin.css
+++ b/app/assets/stylesheets/menu_admin.css
@@ -105,6 +105,10 @@ h3 {
   color: teal;
 }
 
+.order-buttons {
+  margin-bottom: 20px;
+}
+
 .order-panel {
   background-color: black;
   opacity: 0.7;
@@ -112,6 +116,10 @@ h3 {
   margin-top: 80px;
   text-align: center;
   overflow-y: scroll;
+}
+
+#aqua-text {
+  color: #4db6ac;
 }
 
 .trash-icon {
@@ -183,9 +191,6 @@ h3 {
   margin-bottom: 50px;
 }
 
-.tester {
-  background-color: white;
-}
 
 .description-area {
   height: 75px;
@@ -210,4 +215,9 @@ h3 {
 
 #register-user-button {
   margin-top: 15px;
+}
+
+/*EDIT CARTED ITEMS*/
+.edit-cart {
+  text-align: center;
 }
