--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,20 @@
+<!-- ERROR DISPLAY MESSAGE -->
+<% if @user.errors.any? %>
+  <div id="error-explanation">
+    <ul>
+    <% @user.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <div class="row">
   <h1 class="col s12">Register New User</h1>
   <%= form_tag '/users', method: :post do %>
     <div class="signup-form">
       <div>
-        Name: <input type="text" name="name">
+        Name: <input type="text" name="name" value="<%= @user.name %>">
       </div>
       <div>
         Email: <input type="email" name="email">
